refactor(preview-feature-record): removed java 14 preview feature of and refactored code with lombok
removed java 14 preview feature of and refactored code with lombok